--- a/platformio.ini
+++ b/platformio.ini
@@ -6,29 +6,16 @@
 ;   Advanced options: extra scripting
 ;
 ; Please visit documentation for the other options and examples
-; http://docs.platformio.org/page/projectconf.html
+; https://docs.platformio.org/page/projectconf.html
 
 [env:nodemcu-32s]
 platform = espressif32
-board = nodemcu-32s
+board = lolin_s2_mini
 framework = arduino
-
-; Build options
-build_flags = 
-    !python build-tools/protect_git_index.py && python build-tools/gen-build-name.py > src/firmware-build-name.h
-
+build_flags = !python build-tools/protect_git_index.py && python build-tools/gen-build-name.py > src/firmware-build-name.h
 monitor_speed = 57600
-
-; Libraries
 lib_deps = 
-    AccelStepper@1.58
-    Chrono@1.1.1
-    Encoder=https://github.com/PaulStoffregen/Encoder.git
-    ESP32Servo
-
-; Also required is
-;   TFT_esPI - This has some local modifications to get the config in. There must be a better way of doing that!
-
-
-
-
+	Encoder=https://github.com/PaulStoffregen/Encoder.git
+	waspinator/AccelStepper@1.59
+	thomasfredericks/Chrono@1.1.1
+	madhephaestus/ESP32Servo@0.6.0
